--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Nika",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.9",
     "express": "^4.18.2",
