--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "\"Social Network for developers\"",
   "main": "index.js",
   "scripts": {
-    "start": "node server",
-    "server": "nodemon server",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "build": "npm install  && cd ../client && npm install && npm run build",
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nika",
   "license": "ISC",
@@ -15,6 +14,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.9",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
     "gravatar": "^1.8.2",
