--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "\"Social Network for developers\"",
   "main": "index.js",
   "scripts": {
-    "build": "npm install  && cd ../client && npm install && npm run build",
+    "build": "npm install  && cd ./client && npm install && npm run build",
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
